--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,25 +1,17 @@
-
 //    utils
-@import 'utils/variables';
-@import 'utils/mixins';
-@import 'utils/functions';
-  // base
-  @import 'base/reset';
-  @import 'base/typography';
-  @import "./base/normalize";
-  @import "./base/variable";
-  // vendors
- 
-  // components
-  @import './components/index';
-  // layout 
-  
-  @font-face {
-      font-family: Manrope;
-      src: url(../assets/Fonts/Manrope/Manrope-VariableFont_wght.ttf);
-  }
-  *{
-    font-family: Manrope;
-    box-sizing: border-box;
-  }
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "utils/functions";
+// base
+@import "./base/reset";
+@import "./base/typography";
+@import "./base/normalize";
+// vendors
 
+// components
+@import "./components/index";
+// layout
+@import "./layout/index";
+
+// pages
+@import './pages/index';
