--- a/css/main.css
+++ b/css/main.css
@@ -23,12 +23,12 @@ body a {
 }
 
 .btn {
-  display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 11px, 24px, 11px, 24px;
+  padding: 11px, 20px, 11px, 21px;
   background-color: #5542F6;
+  font-size: 1.4rem;
+  font-weight: 600;
   width: 15.1rem;
   height: 4.2rem;
   text-transform: capitalize;
@@ -37,39 +37,9 @@ body a {
   border-radius: 0.4rem;
   color: #FBFAFC;
 }
-.btn:hover {
-  border: 1px solid #5542F6;
-}
-.btn span {
-  padding: 0 0.9rem;
-}
-
-.btn__primary {
-  padding: 2px 8px 4px;
-  border-radius: 4px;
-  background: rgba(85, 66, 246, 0.1);
-  color: #5542F6;
-  border: none;
-  cursor: pointer;
-  margin-right: 28rem;
-}
-
-.btn__warning {
-  color: #FFA043;
-  padding: 2px 8px 4px;
-  border-radius: 4px;
-  background-color: #FFA0431A;
-  border: none;
-  cursor: pointer;
-  margin-right: 27rem;
-}
-
-.icon {
-  cursor: pointer;
-}
-
-.checkbox {
-  background: #84818A;
+.btn span .plus__img {
+  width: 1.33rem;
+  height: 1.33rem;
 }
 
 .container {
@@ -737,107 +707,110 @@ body a {
   background: rgba(85, 66, 246, 0.3);
 }
 
-.members__menu {
-  display: flex;
-  align-items: center;
+.members__text-wrapper {
   justify-content: space-between;
-  padding: 0 0 4rem 0;
+  align-items: center;
+  padding-bottom: 4rem;
 }
-
-.members__item {
+.members__text-wrapper .members__icon-wrapper {
   align-items: center;
 }
-
-.members__link {
-  text-decoration: none;
-  display: inline-block;
+.members__text-wrapper .members__icon-wrapper a {
+  display: flex;
+  flex-basis: 30%;
+  flex-wrap: nowrap;
+  align-items: center;
+  font-size: 1.8rem;
   color: #2E2C34;
 }
+.members__text-wrapper .members__icon-wrapper a img {
+  width: 2rem;
+  height: 2.2rem;
+  margin-right: 1rem;
+}
 
-.server__menu {
-  display: flex;
+.table__menu .links {
   padding-bottom: 1.2rem;
+  border-bottom: 1px solid #EBEAED;
 }
-.server__menu .name {
-  padding-right: 19.2rem;
+.table__menu .table__row {
+  padding: 2.8rem 0 1.8rem;
+  border-bottom: 1px solid #EBEAED;
 }
-.server__menu .name .full__name {
-  padding-left: 2.6rem;
-}
-.server__menu .Address {
-  padding-right: 12rem;
-}
-.server__menu .Phone {
-  padding-right: 12rem;
-}
-.server__menu .Status {
-  padding-right: 12.7rem;
-}
-.server__menu .Language {
-  padding-right: 8.2rem;
-}
-
-.server__link {
-  color: #84818A;
-  text-decoration: none;
-  font-size: 1.2rem;
-}
-
-.member__text {
-  text-transform: capitalize;
-  font-size: 2rem;
-}
-.member__text:hover {
-  cursor: pointer;
-  color: #5542F6;
-  text-decoration: underline #5542F6;
-}
-
-.contact {
-  padding: 0.9rem 0.9rem 0 0rem;
-}
-
-.members__wrapper {
-  display: flex;
-}
-
-.table__item {
-  padding: 2.8rem 0 2rem 0;
+.table__menu .table__item {
   display: flex;
   align-items: center;
 }
-
-p {
-  font-size: 1.4rem;
-  color: #2E2C34;
-  font-weight: 300;
+.table__menu .table__item .input__wrapper {
+  flex-basis: 3%;
 }
-
-h2 {
-  font-weight: 500;
-  color: #2E2C34;
-  font-size: 1.4rem;
+.table__menu .table__item .full__name-wrapper {
+  flex-basis: 27%;
+  align-items: center;
+}
+.table__menu .table__item .full__name-wrapper a {
+  text-transform: uppercase;
+}
+.table__menu .table__item .full__name-wrapper .profile__img-wrapper {
+  display: flex;
+}
+.table__menu .table__item .full__name-wrapper .profile__img-wrapper img {
+  width: 4.2rem;
+  height: 4.2rem;
+  margin-right: 1.6rem;
+}
+.table__menu .table__item .address__wrapper {
+  flex-basis: 17%;
+}
+.table__menu .table__item .phone__wrapper {
+  flex-basis: 17%;
+}
+.table__menu .table__item .status__wrapper {
+  flex-basis: 17%;
+}
+.table__menu .table__item .status__wrapper .btn__active {
+  cursor: pointer;
+  background: rgba(85, 66, 246, 0.1);
+  border-radius: 4px;
+  border: none;
+  color: #5542F6;
+  padding: 2px 8px 4px;
+}
+.table__menu .table__item .status__wrapper .btn__unactive {
+  cursor: pointer;
+  border-radius: 4px;
+  border: none;
+  background: #FFA0431A;
+  color: #FFA043;
+  padding: 2px 8px 4px;
+}
+.table__menu .table__item .lang__wrapper {
+  flex-basis: 14%;
+}
+.table__menu .table__item .action__wrapper {
+  display: flex;
+  justify-content: end;
+  flex-basis: 5%;
+}
+.table__menu .table__item .action__wrapper a {
+  text-transform: uppercase;
+}
+.table__menu .table__item .action__wrapper img {
+  width: 1.6rem;
+  height: 1.6rem;
+  cursor: pointer;
+}
+.table__menu .table__item a {
+  font-size: 1.2rem;
+  color: #84818A;
   text-transform: capitalize;
 }
-
-.input__wrapper {
-  padding-right: 2.6rem;
+.table__menu .table__item h5 {
+  font-size: 1.4rem;
 }
-
-.img__wrapper {
-  padding-right: 1.6rem;
-}
-
-.name__wrapper {
-  padding-right: 11.6rem;
-}
-
-.adress__wrapper {
-  padding-right: 7.6rem;
-}
-
-.phone__wrapper {
-  padding-right: 7.5rem;
+.table__menu .table__item p {
+  color: #2E2C34;
+  font-size: 1.4rem;
 }
 
 /*# sourceMappingURL=main.css.map */
