--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,7 @@
 @import "./base/typography";
 @import "./base/normalize";
 // vendors
-
+  @import './vendors/index';
 // components
 @import "./components/index";
 // layout
