--- a/css/main.css
+++ b/css/main.css
@@ -861,15 +861,6 @@ body a {
   color: #002bf0;
 }
 
-footer {
-  background-color: #0080FF;
-}
-
-.container {
-  margin: 0;
-  padding: 0;
-}
-
 .forma {
   width: 100%;
   background-color: #fff;
@@ -937,12 +928,14 @@ footer {
   margin-bottom: 4rem;
 }
 
-#Elabqol:checked {
+#Eslabqol:active {
   color: #002bf0;
 }
 
-footer a {
-  float: right;
+.forgot {
+  display: flex;
+  justify-content: end;
+  padding-right: 10rem;
 }
 
 .remember {
@@ -965,17 +958,22 @@ footer a {
   margin-bottom: 2rem;
 }
 
-.forma__2-wrapper {
+.forma__2 {
+  background: #002bf0;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
-.forma__2 img {
-  margin-top: 20rem;
+.Dashboard__img {
+  width: 517px;
+  height: 337px;
 }
 
 .form__2-title {
+  margin-top: 8rem;
+  margin-bottom: 1.2rem;
   font-family: Inter;
   font-style: normal;
   font-weight: bold;
