--- a/css/main.css
+++ b/css/main.css
@@ -11828,16 +11828,20 @@ textarea.form-control-lg {
 #sidebar .sidebar_menu .sidebar_link {
   display: flex;
   padding: 16px 12px;
+  align-items: center;
 }
 #sidebar .sidebar_menu .sidebar_link img {
+  display: block;
   width: 18px;
   height: 18px;
   color: #84818a;
 }
 #sidebar .sidebar_menu .sidebar_link p {
+  margin: 0;
   padding-left: 19px;
   font-weight: 600;
   line-height: 20px;
+  font-size: 14px;
 }
 #sidebar .sidebar_menu .sidebar_link:hover {
   background: rgba(85, 66, 246, 0.3);
